sfSandBoxCode/force-app/main/default/objects/Employee_Role_Groupings__c/Employee_Role_Groupings__c.object-meta.xml
<CustomObject>
    <label>Employee Role Grouping</label>
    <nameField>
        <label>Employee Role Groupings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Role Groupings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>