sfSandBoxCode/force-app/main/default/objects/Employee_Role_Groupings__c/fields/Employee_Role__c.field-meta.xml
<CustomField>
    <fullName>Employee_Role__c</fullName>
    <label>Employee Role</label>
    <referenceTo>Employee_Role__c</referenceTo>
    <relationshipLabel>Employee Role Groupings</relationshipLabel>
    <relationshipName>Employee_Role_Groupings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>