sfSandBoxCode/force-app/main/default/objects/Employee_Role_Groupings__c/fields/Line_Manager__c.field-meta.xml
<CustomField>
    <fullName>Line_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Line Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Role Groupings</relationshipLabel>
    <relationshipName>Employee_Role_Groupings</relationshipName>
    <type>Lookup</type>
</CustomField>