sfSandBoxCode/force-app/main/default/objects/Employee_Role_Groupings__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <displayFormat>GROUP - {0000000000}</displayFormat>
    <label>Name</label>
    <type>AutoNumber</type>
</CustomField>